--- a/Mango.Web/Views/Coupon/CouponCreate.cshtml
+++ b/Mango.Web/Views/Coupon/CouponCreate.cshtml
@@ -3,12 +3,12 @@
 <form asp-action="CouponCreate">
     <br />
     <div class="container border p-3">
-        <h1 class="text-white text-center">Create Coupon</h1>
+        <h1 class="text-white text-center">Thêm PGG</h1>
 
         <hr />
         <div class="row">
             <div class="col-2">
-                <label class="control-label pt-2" style="font-size:20px;"> Coupon Code</label>
+                <label class="control-label pt-2" style="font-size:20px;"> Mã GG</label>
             </div>
             <div class="col-10 pb-3">
                 <input asp-for="CouponCode" class="form-control" />
@@ -22,7 +22,7 @@
                 <span asp-validation-for="DiscountAmount" class="text-danger"></span>
             </div>
             <div class="col-2">
-                <label class="control-label pt-2" style="font-size:20px;">Minimum Amount</label>
+                <label class="control-label pt-2" style="font-size:20px;">Giá trị tối thiểu</label>
             </div>
             <div class="col-10 pb-3">
                 <input asp-for="MinAmount" class="form-control" />
@@ -31,7 +31,7 @@
 
             <div class="col-5 offset-2">
 
-                <a asp-action="CouponIndex" class="btn-primary btn form-control ">Back to List</a>
+                <a asp-action="CouponIndex" class="btn-primary btn form-control ">Trở về DS</a>
             </div>
             <div class="col-5">
                 <input type="submit" value="Create" class="btn btn-success form-control" />
