--- a/Mango.Web/Views/Coupon/CouponIndex.cshtml
+++ b/Mango.Web/Views/Coupon/CouponIndex.cshtml
@@ -13,7 +13,7 @@
 			<div class="col-6">
 			</div>
 			<div class="col-6 text-end">
-				<a asp-action="CouponCreate" class="btn btn-outline-primary"><i class="bi bi-plus-square"></i> Create New Coupon</a>
+				<a asp-action="CouponCreate" class="btn btn-outline-primary"><i class="bi bi-plus-square"></i> Thêm mới PGG</a>
 
 			</div>
 		</div>
@@ -21,13 +21,13 @@
 			<thead>
 				<tr>
 					<th>
-						Coupon Code
+						Mã GG
 					</th>
 					<th>
 						Discount Amount
 					</th>
 					<th>
-						Minimum Amount
+						Giá trị tối thiểu
 					</th>
 					<th></th>
 				</tr>
