--- a/Mango.Web/Views/Shared/_Layout.cshtml
+++ b/Mango.Web/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark  box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Mango.Web</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Shopping</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,25 +24,25 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Index">Trang chủ</a>
                         </li>
                         
                         @if (User.IsInRole(SD.RoleAdmin))
                         {
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Content Management
+                                   Quản lý
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" asp-controller="Coupon" asp-action="CouponIndex">Coupon</a></li>
-                                    <li><a class="dropdown-item" asp-controller="Product" asp-action="ProductIndex">Product</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Coupon" asp-action="CouponIndex">Mã GG</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Product" asp-action="ProductIndex">Sản phẩm</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                 </ul>
                             </li>
                         }
                         <li class="nav-item">
                             <a class="nav-link " asp-area="" asp-controller="Order" asp-action="OrderIndex">
-                               Manage Order
+                               Quản lý đơn hàng
                             </a>
                         </li>
                         <li class="nav-item">
@@ -55,10 +55,10 @@
                         @if (!User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a class="nav-link " asp-controller="Auth" asp-action="Login">Login</a>
+                                <a class="nav-link " asp-controller="Auth" asp-action="Login">Đăng nhập</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link " asp-controller="Auth" asp-action="Register">Register</a>
+                                <a class="nav-link " asp-controller="Auth" asp-action="Register">Đăng ký</a>
                             </li>
                         }
                         else
@@ -67,7 +67,7 @@
                                 <a class="nav-link " href="#">Hello @User.Identity.Name</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link " asp-controller="Auth" asp-action="Logout">Logout</a>
+                                <a class="nav-link " asp-controller="Auth" asp-action="Logout">Đăng xuất</a>
                             </li>
                         }
                     </ul>
@@ -83,9 +83,7 @@
     </div>
 
     <footer class="footer text-muted">
-        <div class="text-center">
-            Made with <i class="bi bi-heart-fill "></i> by DotNetMastery
-        </div>
+       
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
