--- a/Mango.Web/Views/Auth/Login.cshtml
+++ b/Mango.Web/Views/Auth/Login.cshtml
@@ -3,19 +3,19 @@
 <form method="post">
     <div class="container border p-4">
         <div class="row text-center">
-            <h1>Login</h1>
+            <h1>Đăng nhập</h1>
         </div>
         <div class="row">
             <div class="col-12 col-md-6 offset-md-3 pb-2">
-                <input asp-for="UserName" class="form-control" placeholder="Username..."/>
+                <input asp-for="UserName" class="form-control" placeholder="Tên đăng nhập..."/>
                 <span asp-validation-for="UserName" class="text-danger" />
             </div>
             <div class="col-12 col-md-6 offset-md-3 pb-2">
-                <input asp-for="Password" class="form-control" placeholder="Password..." />
+                <input asp-for="Password" class="form-control" placeholder="Mật khẩu..." />
                 <span asp-validation-for="Password" class="text-danger" />
             </div>
             <div class="col-12 col-md-6 offset-md-3 pb-2">
-                <button type="submit" class="form-control btn btn-success" value="Submit">Login</button>
+                <button type="submit" class="form-control btn btn-success" value="Submit">Đăng nhập</button>
             </div>
         </div>
     </div>
