--- a/Mango.Web/Views/Auth/Register.cshtml
+++ b/Mango.Web/Views/Auth/Register.cshtml
@@ -3,7 +3,7 @@
 <form method="post">
     <div class="container border p-4">
         <div class="row text-center p-3">
-            <h1>Register</h1>
+            <h1>Đăng ký</h1>
         </div>
         <div class="row">
             <div class="col-12 col-md-6 offset-md-3 pb-2">
@@ -11,25 +11,25 @@
                 <span asp-validation-for="Email" class="text-danger" />
             </div>
             <div class="col-12 col-md-6 offset-md-3 pb-2">
-                <input asp-for="Name" class="form-control" placeholder="Name..." />
+                <input asp-for="Name" class="form-control" placeholder="Tên..." />
                 <span asp-validation-for="Name" class="text-danger" />
             </div>
             <div class="col-12 col-md-6 offset-md-3 pb-2">
-                <input asp-for="PhoneNumber" class="form-control" placeholder="Phone Number..." />
+                <input asp-for="PhoneNumber" class="form-control" placeholder="SĐT..." />
                 <span asp-validation-for="PhoneNumber" class="text-danger" />
             </div>
             <div class="col-12 col-md-6 offset-md-3 pb-2">
-                <input asp-for="Password" class="form-control" placeholder="Password..." />
+                <input asp-for="Password" class="form-control" placeholder="Mật khẩu..." />
                 <span asp-validation-for="Password" class="text-danger" />
             </div>
             <div class="col-12 col-md-6 offset-md-3 pb-2">
                 <select asp-for="Role" class="form-select" asp-items="@ViewBag.RoleList">
-                    <option disabled selected>--Select Role--</option>
+                    <option disabled selected>--Quyền--</option>
                 </select>
             </div>
 
             <div class="col-12 col-md-6 offset-md-3 pb-2">
-                <button type="submit" class="form-control btn btn-success" value="Submit">Register</button>
+                <button type="submit" class="form-control btn btn-success" value="Submit">Đăng ký</button>
             </div>
         </div>
     </div>
