--- a/Mango.Web/Views/Home/ProductDetails.cshtml
+++ b/Mango.Web/Views/Home/ProductDetails.cshtml
@@ -9,7 +9,7 @@
                     <h1 class="text-white">@Model.Name</h1>
                 </div>
                 <div class="col-12 col-md-6 text-end">
-                    <h1 class="text-warning"> @string.Format("{0:c}", Model.Price)</h1>
+                    <h1 class="text-warning"> @string.Format("{0:N0}", Model.Price)</h1>
                 </div>
             </div>
             <div class="card-body">
@@ -36,10 +36,10 @@
             </div>
             <div class="card-footer row bg-dark">
                 <div class="col-12 col-md-6 pb-1 ">
-                    <a asp-action="Index" class="btn btn-success btn-square form-control btn-lg" style="height:50px;">Back to List</a>
+                    <a asp-action="Index" class="btn btn-success btn-square form-control btn-lg" style="height:50px;">Quay lại</a>
                 </div>
                 <div class="col-12 col-md-6 ">
-                    <button type="submit" class="btn btn-primary form-control btn-lg" style="height:50px;">Add to Cart</button>
+                    <button type="submit" class="btn btn-primary form-control btn-lg" style="height:50px;">Thêm vào giỏ</button>
                 </div>
             </div>
         </div>
