--- a/Mango.Web/Views/Order/OrderIndex.cshtml
+++ b/Mango.Web/Views/Order/OrderIndex.cshtml
@@ -28,20 +28,20 @@
 <div class="card shadow border-0 mt-4">
 	<div class="card-header bg-secondary bg-gradient ml-0 py-3 d-flex justify-content-between">
 		<div class="row">
-				<h1 class="text-white">Order List</h1>
+				<h1 class="text-white">Danh sách đơn hàng</h1>
 		</div>
 		<ul class="list-group list-group-horizontal-sm pt-2">
 			<a style="text-decoration:none" asp-controller="Order" asp-action="OrderIndex" asp-route-status="approved">
-				<li class="list-group-item @approved">Approved</li>
+				<li class="list-group-item @approved">Xác nhận</li>
 			</a>
 			<a style="text-decoration:none" asp-controller="Order" asp-action="OrderIndex" asp-route-status="readyforpickup">
-			<li class="list-group-item @readyforpickup">Ready for Pikcup</li>
+			<li class="list-group-item @readyforpickup">Đang giao</li>
 			</a>
 			<a style="text-decoration:none" asp-controller="Order" asp-action="OrderIndex" asp-route-status="cancelled">
-			<li class="list-group-item @cancelled">Cancelled</li>
+			<li class="list-group-item @cancelled">Hủy</li>
 			</a>
 			<a style="text-decoration:none" asp-controller="Order" asp-action="OrderIndex" asp-route-status="all">
-			<li class="list-group-item @all">All</li>
+			<li class="list-group-item @all">Tất cả</li>
 			</a>
 		</ul>
 	</div>
@@ -51,10 +51,10 @@
 				<tr>
 					<th>ID</th>
 					<th>Email</th>
-					<th>Name</th>
-					<th>Phone</th>
-					<th>Status</th>
-					<th>Total</th>
+					<th>Tên</th>
+					<th>SĐT</th>
+					<th>Trạng thái</th>
+					<th>Tổng</th>
 					<th></th>
 				</tr>
 			</thead>
