--- a/Mango.Web/Views/Product/ProductCreate.cshtml
+++ b/Mango.Web/Views/Product/ProductCreate.cshtml
@@ -3,33 +3,33 @@
 <form asp-action="ProductCreate" enctype="multipart/form-data">
     <br />
     <div class="container border p-3">
-        <h1 class="text-white text-center">Create Product</h1>
+        <h1 class="text-white text-center">Thêm mới SP</h1>
 
         <hr />
         <div class="row">
             <div class="col-2">
-                <label class="control-label pt-2" style="font-size:20px;"> Name</label>
+                <label class="control-label pt-2" style="font-size:20px;"> Tên</label>
             </div>
             <div class="col-10 pb-3">
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="col-2">
-                <label class="control-label pt-2" style="font-size:20px;">Category Name</label>
+                <label class="control-label pt-2" style="font-size:20px;">Loại</label>
             </div>
             <div class="col-10 pb-3">
                 <input asp-for="CategoryName" class="form-control" />
                 <span asp-validation-for="CategoryName" class="text-danger"></span>
             </div>
             <div class="col-2">
-                <label class="control-label pt-2" style="font-size:20px;">Description</label>
+                <label class="control-label pt-2" style="font-size:20px;">Mô tả</label>
             </div>
             <div class="col-10 pb-3">
                 <textarea asp-for="Description" class="form-control" rows="5"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="col-2">
-                <label class="control-label pt-2" style="font-size:20px;">Price</label>
+                <label class="control-label pt-2" style="font-size:20px;">Giá</label>
             </div>
             <div class="col-10 pb-3">
                 <input asp-for="Price" class="form-control" />
@@ -46,7 +46,7 @@
 
             <div class="col-5 offset-2">
 
-                <a asp-action="ProductIndex" class="btn-primary btn form-control ">Back to List</a>
+                <a asp-action="ProductIndex" class="btn-primary btn form-control ">Danh sách</a>
             </div>
             <div class="col-5">
                 <input type="submit" value="Create" class="btn btn-success form-control" />
