--- a/Mango.Web/Views/Product/ProductIndex.cshtml
+++ b/Mango.Web/Views/Product/ProductIndex.cshtml
@@ -3,7 +3,7 @@
 	<div class="card-header bg-secondary bg-gradient ml-0 py-3">
 		<div class="row">
 			<div class="col-12 text-center">
-				<h1 class="text-white">Products List</h1>
+				<h1 class="text-white">Danh sách sản phẩm</h1>
 			</div>
 		</div>
 	</div>
@@ -12,7 +12,7 @@
 			<div class="col-6">
 			</div>
 			<div class="col-6 text-end">
-				<a asp-action="ProductCreate" class="btn btn-outline-primary"><i class="bi bi-plus-square"></i> Create New Product</a>
+				<a asp-action="ProductCreate" class="btn btn-outline-primary"><i class="bi bi-plus-square"></i> Thêm mới </a>
 
 			</div>
 		</div>
@@ -20,13 +20,13 @@
 			<thead>
 				<tr>
 					<th>
-						Name
+						Tên
 					</th>
 					<th>
-						Category Name
+						Tên loại
 					</th>
 					<th>
-						Price
+						Giá
 					</th>
 					<th></th>
 				</tr>
