--- a/Mango.Web/Views/Cart/Confirmation.cshtml
+++ b/Mango.Web/Views/Cart/Confirmation.cshtml
@@ -1,7 +1,7 @@
 ﻿@model int
 <div class="text-center">
     <h1 class="text-info pt-4">Đặt hàng thành công.</h1>
-    <p class="pb-3">Đơn đang đưuọc giao</p>
+    <p class="pb-3">Đơn sớm được giao</p>
     <h4 class="text-warning pb-3">Order ID - @Model</h4>
     <img src="/images/order.PNG" width="80%" />
 </div>
