--- a/Mango.Web/Views/Product/ProductCreate.cshtml
+++ b/Mango.Web/Views/Product/ProductCreate.cshtml
@@ -49,7 +49,7 @@
                 <a asp-action="ProductIndex" class="btn-primary btn form-control ">Danh sách</a>
             </div>
             <div class="col-5">
-                <input type="submit" value="Create" class="btn btn-success form-control" />
+                <input type="submit" value="Thêm mới" class="btn btn-success form-control" />
 
             </div>
 
