--- a/Mango.Web/Views/Product/ProductDelete.cshtml
+++ b/Mango.Web/Views/Product/ProductDelete.cshtml
@@ -43,7 +43,7 @@
                 <a asp-action="ProductIndex" class="btn-primary btn form-control ">Về danh sách</a>
             </div>
             <div class="col-5">
-                <input type="submit" value="Delete" class="btn btn-danger form-control" />
+                <input type="submit" value="Xóa" class="btn btn-danger form-control" />
 
             </div>
 
