--- a/Mango.Web/Views/Product/ProductEdit.cshtml
+++ b/Mango.Web/Views/Product/ProductEdit.cshtml
@@ -52,7 +52,7 @@
                         <a asp-action="ProductIndex" class="btn-primary btn form-control ">Về danh sách</a>
                     </div>
                     <div class="col-5">
-                        <input type="submit" value="Update" class="btn btn-success form-control" />
+                        <input type="submit" value="Cập nhật" class="btn btn-success form-control" />
                     </div>
 
                 </div>
