--- a/Mango.Web/Views/Cart/Checkout.cshtml
+++ b/Mango.Web/Views/Cart/Checkout.cshtml
@@ -10,7 +10,7 @@
     <div class="border mt-2 p-4 rounded">
         <div class="container row">
             <div class="col-md-7 col-12">
-                <span style="font-size:25px;" class="text-warning mb-2">Tóm tắt</span>
+                <span style="font-size:25px;" class="text-warning mb-2">Đơn hàng</span>
             </div>
             <div class="col-md-5 col-12">
                 <a asp-action="CartIndex" class="btn btn-outline-warning form-control">Giỏ hàng</a>
@@ -30,9 +30,6 @@
                     <div class="col-12 py-2">
                         <input class="form-control" asp-for="CartHeader.Phone" placeholder="SĐT.." />
                         <span asp-validation-for="CartHeader.Phone" class="text-danger"></span>
-                    </div>
-                    <div class="col-12 pt-2">
-                        <label class="col-form-label">Đơn hàng sớm được đặt</label>
                     </div>
 
                 </div>
@@ -62,7 +59,7 @@
                             </div>
 
                             <div class="col-3" style="font-size:11px;">
-                                    <span style="font-size:17px;"> @cartObj.Product.Price.ToString()</span>
+                                    <span style="font-size:17px;"> @cartObj.Product.Price.ToString("N0")</span>
 
                             </div>
                             <div class="col-3" style="font-size:11px;">
@@ -73,10 +70,10 @@
                         }
                         <div class="row">
                             <div class="col-12 text-center pr-4 text-danger">
-                                Tổng :  @Model.CartHeader.CartTotal.ToString() <br />
+                                Tổng :  @Model.CartHeader.CartTotal.ToString("N0") <br />
                                 @if (Model.CartHeader.Discount > 0)
                                 {
-                                    <span class="text-success"> Giảm giá :  @Model.CartHeader.Discount.ToString()</span>
+                                    <span class="text-success"> Giảm giá :  @Model.CartHeader.Discount.ToString("N0")</span>
                                 }
                             </div>
                         </div>
