--- a/Mango.Web/Views/Coupon/CouponDelete.cshtml
+++ b/Mango.Web/Views/Coupon/CouponDelete.cshtml
@@ -3,34 +3,34 @@
 <form asp-action="CouponDelete">
     <br />
     <div class="container border p-3">
-        <h1 class="text-white text-center">Xóa PGG</h1>
+        <h1 class="text-white text-center">Xóa mã giảm giá</h1>
         <input asp-for="CouponId" hidden />
         <hr />
         <div class="row">
             <div class="col-2">
-                <label class="control-label pt-2" style="font-size:20px;"> Coupon Code</label>
+                <label class="control-label pt-2" style="font-size:20px;"> Mã giảm giá</label>
             </div>
             <div class="col-10 pb-3">
                 <input asp-for="CouponCode" disabled class="form-control" />
             </div>
             <div class="col-2">
-                <label class="control-label pt-2" style="font-size:20px;">Discount Amount</label>
+                <label class="control-label pt-2" style="font-size:20px;">Chiết khấu</label>
             </div>
             <div class="col-10 pb-3">
                 <input asp-for="DiscountAmount" disabled class="form-control" />
             </div>
             <div class="col-2">
-                <label class="control-label pt-2" style="font-size:20px;">Minimum Amount</label>
+                <label class="control-label pt-2" style="font-size:20px;">Giá trị tối thiểu</label>
             </div>
             <div class="col-10 pb-3">
                 <input asp-for="MinAmount" disabled class="form-control" />
             </div>
 
             <div class="col-5 offset-2">
-                <a asp-action="CouponIndex" class="btn-primary btn form-control ">Back to List</a>
+                <a asp-action="CouponIndex" class="btn-primary btn form-control ">Quay lại</a>
             </div>
             <div class="col-5">
-                <input type="submit" value="Delete" class="btn btn-danger form-control" />
+                <input type="submit" value="Xóa" class="btn btn-danger form-control" />
             </div>
 
         </div>
