--- a/Mango.Web/Views/Order/OrderDetail.cshtml
+++ b/Mango.Web/Views/Order/OrderDetail.cshtml
@@ -48,25 +48,13 @@
 
                             @if (User.IsInRole(SD.RoleAdmin))
                             {
-                                <div class="row my-1">
-                                    <div class="col-3">Session ID</div>
-                                    <div class="col-9">
-                                        <input asp-for="StripeSessionId" readonly class="form-control" />
-                                    </div>
-                                </div>
-                                <div class="row my-1">
-                                    <div class="col-3">Payment Intent ID</div>
-                                    <div class="col-9">
-                                        <input asp-for="PaymentIntentId" readonly class="form-control" />
-                                    </div>
-                                </div>
-                            }
                             <div class="row my-1">
                                 <div class="col-3">Trạng thái đơn</div>
                                 <div class="col-9">
                                     <input asp-for="Status" readonly class="form-control" />
                                 </div>
-                            </div>
+								</div>
+							}
 
                         </div>
                         <div class="col-12 col-lg-5 offset-lg-1">
@@ -82,11 +70,11 @@
                                         <div class="col-8">
 
                                             <h6 class="my-0 text-white-50">@detail.ProductName</h6>
-                                                <small class="text-muted">Price : @detail.Price.ToString()</small><br />
-                                                <small class="text-muted">Quantity : @detail.Count</small>
+                                                <small class="text-muted">Giá : @detail.Price.ToString("N0")</small><br />
+                                                <small class="text-muted">Số lượng : @detail.Count</small>
                                         </div>
                                         <div class="col-4 text-end">
-                                            <p class="text-success">@((detail.Count * detail.Price).ToString())</p>
+                                                <p class="text-success">@((detail.Count * detail.Price).ToString("N0"))</p>
                                         </div>
                                     </div>
                                 </li>
@@ -97,7 +85,7 @@
                                             <h5 class="text-white">Tổng </h5>
                                         </div>
                                         <div class="col-6 text-end">
-                                            <h5 class="text-white">@Model.OrderTotal.ToString()</h5>
+                                            <h5 class="text-white">@Model.OrderTotal.ToString("N0")</h5>
                                         </div>
                                     </div>
                                 </li>
@@ -105,6 +93,10 @@
 
                             @if (User.IsInRole(SD.RoleAdmin))
                             {
+                                @if (Model.Status == SD.Status_Pending)
+                                {
+                                    <button asp-action="ApprovedOrder" asp-route-orderId="@Model.OrderHeaderId" type="submit" class="btn btn-success form-control my-1">Xác nhận</button>
+                                }
                                 @if (Model.Status == SD.Status_Approved)
                                 {
                                     <button asp-action="OrderReadyForPickup" asp-route-orderId="@Model.OrderHeaderId" type="submit" class="btn btn-success form-control my-1">Đang giao</button>
@@ -114,7 +106,7 @@
                                     <button asp-action="CompleteOrder" asp-route-orderId="@Model.OrderHeaderId" type="submit" class="btn btn-success form-control my-1">Hoàn thành</button>
                                 }
 
-                                if (Model.Status == SD.Status_Approved || Model.Status == SD.Status_ReadyForPickup)
+                                if (Model.Status == SD.Status_Pending||Model.Status == SD.Status_Approved || Model.Status == SD.Status_ReadyForPickup)
                                 {
                                     <button asp-action="CancelOrder" asp-route-orderId="@Model.OrderHeaderId" type="submit" class="btn btn-danger form-control my-1">Hủy đơn</button>
                                 }
