--- a/Mango.Web/Views/Product/ProductIndex.cshtml
+++ b/Mango.Web/Views/Product/ProductIndex.cshtml
@@ -42,7 +42,7 @@
 							@item.CategoryName
 						</td>
 						<td>
-							@((item.Price).ToString("c"))
+							@((item.Price).ToString("N0"))
 						</td>
 						<td>
 							<a class="btn btn-success" asp-action="ProductEdit" asp-route-productId="@item.ProductId">
